feat: mapeamento correto de comprador/fornecedor e melhorias gerais
Backend:
- Adicionado campo nomeCliente em Venda para rastrear comprador
- ItemVenda agora expõe fornecedora do produto via @JsonProperty
- Fornecedora expõe contato e chavePix no JSON
- VendaController aceita nomeCliente como parâmetro opcional

Frontend:
- Vendas: mapeamento correto de Comprador vs Fornecedor das peças
- Modal de detalhes mostra quem comprou e quem forneceu separadamente
- Aba Repasse lista fornecedoras dos itens (não o comprador)
- Coluna "Comprador" na tabela de vendas
- Visualizar Lote padronizado (PageLayout, paginação, responsivo)
- API carrinho com incrementar/decrementar quantidade
- API vendas com finalizarVendaSimples

Docker/Config:
- Configurações de CORS e JWT atualizadas
- Dockerfile e docker-compose ajustados para deploy